feat: new authors api endpoint
