# backend/src/KapitelShelf.Api/DTOs/Author/AuthorSortByDTO.cs
@@ -1,0 +1,26 @@
+﻿// <copyright file="AuthorSortByDTO.cs" company="KapitelShelf">
+// Copyright (c) KapitelShelf. All rights reserved.
+// </copyright>
+
+namespace KapitelShelf.Api.DTOs.Author;
+
+/// <summary>
+/// The sort by enum for series.
+/// </summary>
+public enum AuthorSortByDTO
+{
+    /// <summary>
+    /// Default sorting order for series.
+    /// </summary>
+    Default,
+
+    /// <summary>
+    /// Sort by the author first name.
+    /// </summary>
+    FirstName,
+
+    /// <summary>
+    /// Sort by the author last name.
+    /// </summary>
+    LastName,
+}
